--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/alejandrorvilla/omnishop#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "1.9.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.5",
+    "react-router-dom": "6.8.0",
+    "redux": "4.2.1",
+    "redux-saga": "1.2.2"
   },
   "devDependencies": {
     "@babel/core": "7.20.12",
@@ -39,6 +44,7 @@
     "terser-webpack-plugin": "5.3.6",
     "ts-loader": "9.4.2",
     "typescript": "4.9.5",
+    "url-loader": "4.1.1",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1"
