--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,11 @@
       "noImplicitAny": true,
       "allowSyntheticDefaultImports": true,
       "module": "es6",
-      "target": "es5",
+      "target": "es6",
       "jsx": "react",
       "allowJs": true,
       "moduleResolution": "node",
-      "lib": ["es5", "es6", "dom"],
+      "lib": ["es6", "dom"],
     },
     "include": [
       "src"
